# remote_run_everything

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
remote_run_everything/: __init__.py  by_http.py  conf.py  hist_pickle.py  local.py  remote.py
remote_run_everything.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
remote_run_everything/__scripts__/: kill_ps.py  kill_ss.py  mongo_dump_restore.py
remote_run_everything/binocular/: ba_front.py  back_tool.py  cam_tool.py  front_tool.py  relative_pos.py
remote_run_everything/db/: backup.py  crud_sqlalchemy.py  crude_duck.py  kv_store.py
remote_run_everything/deploy/: by_http.py  by_http_server.py  by_http_tool.py  by_sftp.py  down.py  hist_pickle.py  local.py  record_mod.py  remote.py
remote_run_everything/nosql/: no_sql.py  no_sql_mysql.py  no_sql_pg.py  no_sql_tool.py
remote_run_everything/pg/: pg.py  sql.py  sql_tool.py  sqlacodegen_go_struct.py
remote_run_everything/tools/: common.py  common1.py  decorators.py  process_manage.py  sqlacodegen_go_struct.py
remote_run_everything/vsconf/: conf_txt.py  core.py
